cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp
        testcases/1-1/1.in
        testcases/1-1/1.out
        testcases/1-1/10.in
        testcases/1-1/10.out
        testcases/1-1/11.in
        testcases/1-1/11.out
        testcases/1-1/12.in
        testcases/1-1/12.out
        testcases/1-1/2.in
        testcases/1-1/2.out
        testcases/1-1/3.in
        testcases/1-1/3.out
        testcases/1-1/4.in
        testcases/1-1/4.out
        testcases/1-1/5.in
        testcases/1-1/5.out
        testcases/1-1/6.in
        testcases/1-1/6.out
        testcases/1-1/7.in
        testcases/1-1/7.out
        testcases/1-1/8.in
        testcases/1-1/8.out
        testcases/1-1/9.in
        testcases/1-1/9.out
        testcases/1-2/1.in
        testcases/1-2/1.out
        testcases/1-2/10.in
        testcases/1-2/10.out
        testcases/1-2/11.in
        testcases/1-2/11.out
        testcases/1-2/12.in
        testcases/1-2/12.out
        testcases/1-2/13.in
        testcases/1-2/13.out
        testcases/1-2/14.in
        testcases/1-2/14.out
        testcases/1-2/15.in
        testcases/1-2/15.out
        testcases/1-2/16.in
        testcases/1-2/16.out
        testcases/1-2/2.in
        testcases/1-2/2.out
        testcases/1-2/3.in
        testcases/1-2/3.out
        testcases/1-2/4.in
        testcases/1-2/4.out
        testcases/1-2/5.in
        testcases/1-2/5.out
        testcases/1-2/6.in
        testcases/1-2/6.out
        testcases/1-2/7.in
        testcases/1-2/7.out
        testcases/1-2/8.in
        testcases/1-2/8.out
        testcases/1-2/9.in
        testcases/1-2/9.out
        main.cpp tournament.cpp battle.cpp number.cpp number.h tournament.h battle.h utilities.h env.h)
